﻿v0.4.8
* Fixed: TankSwap options should now work as intended.
* Added: German Translation for Unholy Contract.
* Added: German Translations for Tidal Waves.
----
v0.4.7
* New: Buff monitoring and triggers.
* New: Screen alerts now seperated by color sets.
* Fixed: Murdantix: Alert Timer option for Soul Trauma.
* Fixed: Say Type Triggers.
* Fixed: Alerts not closing if the encounter ends.
* Fixed: Tank-Swap Monitor was never actually triggering. Should be active now.
* Fixed: Issues when filtering Casts (currently only King fight).
* Added: Matron Zamira: French support for Hideous Blast.
* Added: Matron Zamira: Hideous Blast Screen alert now yellow.
* Added: Sicaron. Mechanic Timer for Unholy Contract.
* Added: Sicaron. Personal screen alert for Unholy Contract. ** untested
* Added: King Molinar. Screen Alert for Consuming Essence. (yellow)
* Added: Prince Dollin. Screen Alert for Terminate Life. (orange)
* Added: Prince Dollin. Screen Alert for Consuming Essence. (yellow)
* Added: Alert filters for Prince Dollin and King Molinar.
----
v0.4.6
* Fixed: Rare case of idle bosses reporting errors after an encounter.
* Fixed: Murdantix Mangling Crush (German Client)
* Changed: King Molinar. Extended the screen alert for Cursed Blows by 1 second.
* Added: Matron Zamira. German support for Tank-Swaps Matron's Curse.
* Added: Matron Zamira. German support for Dark Concussion.
* Added: Matron Zamira. German support for Hideous Blast.
* Added: Matron Zamira. French support for Dark Concussion.
* Added: German translation for new Screen Alert options.
* Added: French translation for new Screen Alert options.
----
v0.4.5
* Fixed: Errors with Screen Alerts.
* Fixed: Errors with Damage type triggers.
* Added: King Molinar's Cursed Blows Screen Alerts.
----
v0.4.4
* Fixed: Error Messages in Prince Hylas encounter.
* New: First release of KM:Boss Mods alerts, Flashing borders and/or text display.
* Change: Major overhaul of the Trigger engine allowing for greater flexibility.